--- a/project6.ipynb
+++ b/project6.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
        "[15591 rows x 8 columns]"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "[15591 rows x 8 columns]"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +945,7 @@
        "[15591 rows x 12 columns]"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1376,7 @@
        "[15591 rows x 52 columns]"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1410,7 @@
        "Text(0.5, 1.0, 'Baseflow in different seasons')"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1449,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1519,7 @@
        "Text(0.5, 1.0, 'Location')"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1543,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1555,7 +1555,7 @@
        "       189,  56,  98], dtype=int64)"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1574,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1583,7 @@
        "Text(0.5, 1.0, 'Observed Baseflow over years')"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1609,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1618,7 +1618,7 @@
        "Text(0.5, 1.0, 'Evapotranspiration vs Observed baseflow')"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1650,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1659,7 +1659,7 @@
        "Text(0.5, 1.0, 'Precipitation vs Observed baseflow')"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1691,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1700,7 +1700,7 @@
        "Text(0.5, 1.0, 'Irrigation_pumping vs baseflow')"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1739,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1748,7 +1748,7 @@
        "Text(0.5, 1.0, 'Irrigation_pumping over years')"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1787,7 +1787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1804,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1820,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1873,7 +1873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1926,7 +1926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1971,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2357,7 +2357,7 @@
        "[15591 rows x 52 columns]"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2375,13 +2375,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "--------------------------\n",
+      "R-Squared in fold 1: 0.8212602993465563\n",
+      "R-Squared in fold 2: 0.8093331737146002\n",
+      "R-Squared in fold 3: 0.838812266727394\n",
+      "R-Squared in fold 4: 0.6327883843720868\n",
+      "R-Squared in fold 5: 0.8249104365954864\n",
+      "R-Squared in fold 6: 0.7804190507849733\n",
+      "R-Squared in fold 7: 0.8640492418183554\n",
+      "R-Squared in fold 8: 0.7855579571855964\n",
+      "R-Squared in fold 9: 0.8638922147428988\n",
+      "R-Squared in fold 10: 0.8397662334835396\n",
+      "--------------------------\n",
       "Mean CV R-Squared: 0.8060789258771488\n",
       "Mean CV MSE: 591.7876827723433\n",
       "Mean Intercept: 10626.618411731295\n",
@@ -2415,7 +2427,8 @@
     "coefficients = []\n",
     "mse_scores = []\n",
     "r_squared = []\n",
-    "\n",
+    "i = 1\n",
+    "print(\"--------------------------\")\n",
     "for train_index, test_index in kf.split(X):\n",
     "    X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
     "    y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
@@ -2429,9 +2442,11 @@
     "    intercepts.append(model.intercept_)\n",
     "    coefficients.append(model.coef_)\n",
     "    r_squared.append(r2_score(y_test, y_pred))\n",
+    "    print(f\"R-Squared in fold {i}: {r2_score(y_test, y_pred)}\")\n",
+    "    i += 1\n",
     "\n",
     "\n",
-    "\n",
+    "print(\"--------------------------\")\n",
     "intercepts = np.array(intercepts)\n",
     "coefficients = np.array(coefficients)\n",
     "\n",
@@ -2455,7 +2470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2546,7 +2561,7 @@
        "  <th>Date:</th>             <td>Tue, 12 Mar 2024</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>16:12:30</td>     <th>  Log-Likelihood:    </th> <td> -71741.</td> \n",
+       "  <th>Time:</th>                 <td>17:24:58</td>     <th>  Log-Likelihood:    </th> <td> -71741.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td> 15591</td>      <th>  AIC:               </th> <td>1.436e+05</td>\n",
@@ -2745,7 +2760,7 @@
        "\\textbf{Model:}              &       OLS        & \\textbf{  Adj. R-squared:    } &      0.816   \\\\\n",
        "\\textbf{Method:}             &  Least Squares   & \\textbf{  F-statistic:       } &      1411.   \\\\\n",
        "\\textbf{Date:}               & Tue, 12 Mar 2024 & \\textbf{  Prob (F-statistic):} &      0.00    \\\\\n",
-       "\\textbf{Time:}               &     16:12:30     & \\textbf{  Log-Likelihood:    } &    -71741.   \\\\\n",
+       "\\textbf{Time:}               &     17:24:58     & \\textbf{  Log-Likelihood:    } &    -71741.   \\\\\n",
        "\\textbf{No. Observations:}   &       15591      & \\textbf{  AIC:               } &  1.436e+05   \\\\\n",
        "\\textbf{Df Residuals:}       &       15541      & \\textbf{  BIC:               } &  1.440e+05   \\\\\n",
        "\\textbf{Df Model:}           &          49      & \\textbf{                     } &              \\\\\n",
@@ -2833,7 +2848,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.816\n",
        "Method:                 Least Squares   F-statistic:                     1411.\n",
        "Date:                Tue, 12 Mar 2024   Prob (F-statistic):               0.00\n",
-       "Time:                        16:12:30   Log-Likelihood:                -71741.\n",
+       "Time:                        17:24:58   Log-Likelihood:                -71741.\n",
        "No. Observations:               15591   AIC:                         1.436e+05\n",
        "Df Residuals:                   15541   BIC:                         1.440e+05\n",
        "Df Model:                          49                                         \n",
