--- a/project6.ipynb
+++ b/project6.ipynb
@@ -996,6 +996,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### This part is for creating our model!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -1507,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1522,13 +1529,94 @@
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Segment_id</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>Evapotranspiration</th>\n",
+       "      <th>Precipitation</th>\n",
+       "      <th>Irrigation_pumping</th>\n",
+       "      <th>Observed</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>season</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>1944-04-30</td>\n",
+       "      <td>256</td>\n",
+       "      <td>1941550</td>\n",
+       "      <td>14524320</td>\n",
+       "      <td>4.60</td>\n",
+       "      <td>35.50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>747.80328</td>\n",
+       "      <td>1944</td>\n",
+       "      <td>4</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Spring</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>1949-04-30</td>\n",
+       "      <td>239</td>\n",
+       "      <td>1630030</td>\n",
+       "      <td>14550720</td>\n",
+       "      <td>2.32</td>\n",
+       "      <td>26.24</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>712.55738</td>\n",
+       "      <td>1949</td>\n",
+       "      <td>4</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Spring</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Text(0.5, 1.0, 'Location')"
+       "         Date  Segment_id        x         y  Evapotranspiration  \\\n",
+       "45 1944-04-30         256  1941550  14524320                4.60   \n",
+       "41 1949-04-30         239  1630030  14550720                2.32   \n",
+       "\n",
+       "    Precipitation  Irrigation_pumping   Observed  year  month  day  season  \n",
+       "45          35.50                 0.0  747.80328  1944      4   30  Spring  \n",
+       "41          26.24                 0.0  712.55738  1949      4   30  Spring  "
       ]
      },
-     "execution_count": 37,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Sadra\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\matplotlib\\collections.py:967: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  scale = np.sqrt(self._sizes) * dpi / 72.0 * self._factor\n"
+     ]
     },
     {
      "data": {
@@ -1545,7 +1633,26 @@
     "sns.scatterplot(x=\"x\", y=\"y\", data=data, s=data[\"Observed\"])\n",
     "plt.xlabel(\"X\")\n",
     "plt.ylabel(\"y\", rotation=60)\n",
-    "plt.title(\"Location\")"
+    "plt.title(\"Location\") \n",
+    "top_observed = data.groupby(['x', 'y']).apply(lambda x: x.nlargest(1, 'Observed')).reset_index(drop=True)\n",
+    "\n",
+    "# Sort by 'Observed' in descending order to get the top 2 different (x, y) coordinates with the highest values in 'Observed'\n",
+    "top_2_observed = top_observed.nlargest(2, 'Observed')\n",
+    "display(top_2_observed)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The top 2 locations were observed with their data info"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Finding the unique values of the segments"
    ]
   },
   {
