--- a/project6.ipynb
+++ b/project6.ipynb
@@ -1862,7 +1862,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### It looks that by increasing irrigation pumping the baseflow decreses but to make sure we will test it in different segments"
+    "#### It looks that by increasing irrigation pumping the baseflow decreses but to make sure we will test it in different segments\n",
+    "#### And only this feature is not suitable for creating the model and we need to use other features as well."
    ]
   },
   {
