--- a/project6.ipynb
+++ b/project6.ipynb
@@ -687,7 +687,7 @@
     }
    ],
    "source": [
-    "##### Subtracting 693963 from Data column\n",
+    "##### Subtracting 693963 from Data column to make it from 01-01-1900\n",
     "data[\"Date\"] = data[\"Date\"] - 693963\n",
     "data['Date'] = pd.to_datetime(data.Date, unit='D', origin=pd.Timestamp('1900-01-01'))\n",
     "\n",
